--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
   "name": "identification-client",
-  "version": "0.0.0",
-  "license": "MIT",
+  "version": "1.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-dev": "ng build --prod --base-href /identification/ && ng-javaee-config",
+    "build-hmg": "ng build --prod --env=cstar-hmg --base-href /identification/ && ng-javaee-config",
+    "build-prod": "ng build --prod --env=cstar-prd --base-href /identification/ && ng-javaee-config"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cdk": "2.0.0-beta.12",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "2.0.0-beta.12",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "core-js": "^2.4.1",
-    "front-end-common": "0.0.25",
+    "front-end-common": "1.0.4",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
